[project]
name = "lc-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.26.2",
    "deepagents>=0.6.7",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.0.1",
    "langchain-modal>=0.0.4",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-redis>=0.5.0",
    "langsmith>=0.8.6",
    "openai>=2.38.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]
